--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "This is a bot to play Battleship game on Telegram",
   "main": "index.js",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+      "eslint": "^6.8.0",
+      "eslint-config-airbnb": "^18.1.0",
+      "eslint-config-airbnb-base": "^14.1.0",
+      "eslint-config-prettier": "^6.11.0",
+      "eslint-plugin-import": "^2.20.2",
+      "eslint-plugin-prettier": "^3.1.3",
+      "prettier": "^2.0.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
